--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,6 +52,7 @@ Author URL: http://w3layouts.com
                                class="login-input" />
                         <input type="password" name="password" id="password" placeholder="Password"
                                class="login-input" />
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     </div>
                     <div class="col-md-8 login-center text-start">
                         <button class="btn btn-style btn-style-3 text-left">Log In</button>
